--- a/requirements.txt
+++ b/requirements.txt
@@ -15,12 +15,15 @@ cryptography==2.1.4
 distro-info===0.18ubuntu0.18.04.1
 Django==3.1.3
 django-filter==2.4.0
+django-model-utils==4.2.0
+django-notifications-hq==1.7.0
 djangorestframework==3.12.2
 httplib2==0.9.2
 hyperlink==17.3.1
 idna==2.6
 incremental==16.10.1
 Jinja2==2.10
+jsonfield==3.1.0
 jsonpatch==1.16
 jsonpointer==1.10
 jsonschema==2.6.0
@@ -53,6 +56,7 @@ six==1.11.0
 sos==4.3
 sqlparse==0.4.2
 ssh-import-id==5.7
+swapper==1.3.0
 systemd-python==234
 Twisted==17.9.0
 typing_extensions==4.1.1
