--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ asn1crypto==0.24.0
 attrs==17.4.0
 Automat==0.6.0
 blinker==1.4
+boto3==1.23.10
+botocore==1.26.10
 certifi==2018.1.18
 chardet==3.0.4
 click==6.7
@@ -14,15 +16,18 @@ constantly==15.1.0
 cryptography==2.1.4
 distro-info===0.18ubuntu0.18.04.1
 Django==3.1.3
+django-debug-toolbar==3.2.4
 django-filter==2.4.0
 django-model-utils==4.2.0
 django-notifications-hq==1.7.0
+django-storages==1.12.3
 djangorestframework==3.12.2
 httplib2==0.9.2
 hyperlink==17.3.1
 idna==2.6
 incremental==16.10.1
 Jinja2==2.10
+jmespath==0.10.0
 jsonfield==3.1.0
 jsonpatch==1.16
 jsonpointer==1.10
@@ -44,12 +49,14 @@ PyJWT==1.5.3
 pyOpenSSL==17.5.0
 pyserial==3.4
 python-apt==1.6.5+ubuntu0.7
+python-dateutil==2.8.2
 python-debian==0.1.32
 pytz==2022.2.1
 pyxdg==0.25
 PyYAML==3.12
 requests==2.18.4
 requests-unixsocket==0.1.5
+s3transfer==0.5.2
 SecretStorage==2.3.1
 service-identity==16.0.0
 six==1.11.0
@@ -63,6 +70,6 @@ typing_extensions==4.1.1
 ubuntu-advantage-tools==27.9
 ufw==0.36
 unattended-upgrades==0.1
-urllib3==1.22
+urllib3==1.26.12
 wrapt==1.14.1
 zope.interface==4.3.2
