--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.4.1
 asn1crypto==0.24.0
+async-timeout==4.0.2
 attrs==17.4.0
 Automat==0.6.0
 blinker==1.4
@@ -14,6 +15,7 @@ command-not-found==0.3
 configobj==5.0.6
 constantly==15.1.0
 cryptography==2.1.4
+Deprecated==1.2.13
 distro-info===0.18ubuntu0.18.04.1
 Django==3.1.3
 django-debug-toolbar==3.2.4
@@ -25,6 +27,7 @@ djangorestframework==3.12.2
 httplib2==0.9.2
 hyperlink==17.3.1
 idna==2.6
+importlib-metadata==4.8.3
 incremental==16.10.1
 Jinja2==2.10
 jmespath==0.10.0
@@ -39,6 +42,7 @@ MarkupSafe==1.0
 mysqlclient==2.0.3
 netifaces==0.10.4
 oauthlib==2.0.6
+packaging==21.3
 PAM==0.4.2
 pexpect==4.2.1
 pyasn1==0.4.2
@@ -47,13 +51,16 @@ pycrypto==2.6.1
 PyGObject==3.26.1
 PyJWT==1.5.3
 pyOpenSSL==17.5.0
+pyparsing==3.0.9
 pyserial==3.4
 python-apt==1.6.5+ubuntu0.7
 python-dateutil==2.8.2
 python-debian==0.1.32
+python-memcached==1.59
 pytz==2022.2.1
 pyxdg==0.25
 PyYAML==3.12
+redis==4.3.4
 requests==2.18.4
 requests-unixsocket==0.1.5
 s3transfer==0.5.2
@@ -72,4 +79,5 @@ ufw==0.36
 unattended-upgrades==0.1
 urllib3==1.26.12
 wrapt==1.14.1
+zipp==3.6.0
 zope.interface==4.3.2
