--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,21 @@
+amqp==5.1.1
 asgiref==3.4.1
 asn1crypto==0.24.0
 async-timeout==4.0.2
 attrs==17.4.0
 Automat==0.6.0
+billiard==3.6.4.0
 blinker==1.4
 boto3==1.23.10
 botocore==1.26.10
+cached-property==1.5.2
 celery==5.1.2
 certifi==2018.1.18
 chardet==3.0.4
-click==6.7
+click==7.1.2
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
 cloud-init==22.2
 colorama==0.3.7
 command-not-found==0.3
@@ -38,6 +44,7 @@ jsonpointer==1.10
 jsonschema==2.6.0
 keyring==10.6.0
 keyrings.alt==3.0
+kombu==5.1.0
 language-selector==0.1
 MarkupSafe==1.0
 mysqlclient==2.0.3
@@ -46,6 +53,7 @@ oauthlib==2.0.6
 packaging==21.3
 PAM==0.4.2
 pexpect==4.2.1
+prompt-toolkit==3.0.31
 pyasn1==0.4.2
 pyasn1-modules==0.2.1
 pycrypto==2.6.1
@@ -79,6 +87,8 @@ ubuntu-advantage-tools==27.9
 ufw==0.36
 unattended-upgrades==0.1
 urllib3==1.26.12
+vine==5.0.0
+wcwidth==0.2.5
 wrapt==1.14.1
 zipp==3.6.0
 zope.interface==4.3.2
