--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ blinker==1.4
 boto3==1.23.10
 botocore==1.26.10
 cached-property==1.5.2
-celery==5.1.2
+celery
 certifi==2018.1.18
 chardet==3.0.4
 click==7.1.2
@@ -24,13 +24,14 @@ constantly==15.1.0
 cryptography==2.1.4
 Deprecated==1.2.13
 distro-info===0.18ubuntu0.18.04.1
-Django==3.1.3
-django-debug-toolbar==3.2.4
+Django
+django-debug-toolbar
 django-filter==2.4.0
 django-model-utils==4.2.0
-django-notifications-hq==1.7.0
+django-notifications-hq
+django-ratelimit==3.0.1
 django-storages==1.12.3
-djangorestframework==3.12.2
+djangorestframework
 httplib2==0.9.2
 hyperlink==17.3.1
 idna==2.6
@@ -44,7 +45,7 @@ jsonpointer==1.10
 jsonschema==2.6.0
 keyring==10.6.0
 keyrings.alt==3.0
-kombu==5.1.0
+kombu
 language-selector==0.1
 MarkupSafe==1.0
 mysqlclient==2.0.3
@@ -63,13 +64,13 @@ pyOpenSSL==17.5.0
 pyparsing==3.0.9
 pyserial==3.4
 python-apt==1.6.5+ubuntu0.7
-python-dateutil==2.8.2
+python-dateutil
 python-debian==0.1.32
 python-memcached==1.59
-pytz==2022.2.1
+pytz
 pyxdg==0.25
 PyYAML==3.12
-redis==4.3.4
+redis
 requests==2.18.4
 requests-unixsocket==0.1.5
 s3transfer==0.5.2
